@@ -1,30 +1,0 @@
-use strict;
-use inc::Module::Install 0.92;
-
-name           'Padre-Plugin-JavaScript';
-license        'perl';
-author         'Gabor Szabo';
-all_from       'lib/Padre/Plugin/JavaScript.pm';
-
-requires       'perl'                    => '5.008001';
-requires       'Exporter'                => 0;
-requires       'Padre'                   => '0.43';
-requires       'Class::Autouse'          => '1.26';
-requires       'JavaScript::Beautifier'  => '0.03';
-requires       'JavaScript::Minifier::XS';
-requires       'JE';
-
-test_requires  'Test::More'              => '0.47';
-test_requires  'Test::NeedsDisplay'      => '1.05';
-test_requires  'Test::NoWarnings'        => '0.084';
-no_index       'directory' => [ qw{ t xt eg share inc privinc} ];
-
-homepage       'http://padre.perlide.org/';
-bugtracker     'http://padre.perlide.org/';
-repository     'http://svn.perlide.org/padre/trunk/Padre-Plugin-JavaScript';
-#mailinglist    'http://mail.perlide.org/mailman/listinfo/padre-dev';
-
-is_padre_plugin; # authors: Install Module::Install::PadrePlugin
-use_ptar() if author_context && $^O =~/win/i; #from Module::Install::PerlTar
- 
-WriteAll;
