@@ -1,11 +1,0 @@
-
-Padre::Plugin::JavaScript - JavaScript support of Padre
-
-installation:
-
-Padre
-
-For detailed installation look at 
-
-http://padre.perlide.org/wiki/Download
-
