@@ -1,0 +1,25 @@
+name             = Padre-Plugin-JavaScript
+author           = Fayland Lam <fayland@gmail.com>
+author           = Adam Kennedy <adamk@cpan.org>
+author           = Ahmad M. Zawawi <ahmad.zawawi@gmail.com>
+license          = Perl_5
+version          = 0.10
+copyright_holder = Fayland Lam
+
+[@PadrePlugin]
+
+homepage         = http://padre.perlide.org
+repository       = http://svn.perlide.org/padre/trunk/Padre-Plugin-JavaScript/
+
+[Prereqs / TestRequires]
+Test::More       = 0
+Locale::Msgfmt   = 0.14
+
+[Prereqs]
+Padre                    = 0.57
+Exporter                 = 0
+Padre                    = 0.43
+Class::Autouse           = 1.26
+JavaScript::Beautifier'  = 0.03
+JavaScript::Minifier::XS = 0
+JE                       = 0
