@@ -1,14 +1,11 @@
 package Padre::Plugin::JavaScript;
 
-# Light plugin with no menu entries.
-# Provides JavaScript document support.
+# ABSTRACT: L<Padre> and JavaScript
 
 use 5.008;
 use strict;
 use warnings;
 use Class::Autouse 'Padre::Plugin::JavaScript::Document';
-
-our $VERSION = '0.26';
 
 use base 'Padre::Plugin';
 
@@ -16,81 +13,84 @@ use base 'Padre::Plugin';
 # Padre::Plugin API Methods
 
 sub padre_interfaces {
-	'Padre::Plugin'          => 0.43,
-	'Padre::Document'        => 0.43,
+	'Padre::Plugin' => 0.47, 'Padre::Document' => 0.47,;
 }
 
 sub registered_documents {
 	'application/javascript' => 'Padre::Plugin::JavaScript::Document',
-	'application/json'       => 'Padre::Plugin::JavaScript::Document',
+		'application/json'   => 'Padre::Plugin::JavaScript::Document',
+		;
+}
+
+sub plugin_name {
+	Wx::gettext('JavaScript');
 }
 
 sub menu_plugins_simple {
 	my $self = shift;
-	return ('JavaScript' => [
-		'JavaScript Beautifier', sub { $self->js_eautifier },
-		'JavaScript Minifier',   sub { $self->js_minifier },
-		'JavaScript Syntax Check', sub { $self->js_syntax_check },
-	]);
+	return (
+		Wx::gettext('JavaScript') => [
+			Wx::gettext('JavaScript Beautifier'),   sub { $self->js_eautifier },
+			Wx::gettext('JavaScript Minifier'),     sub { $self->js_minifier },
+			Wx::gettext('JavaScript Syntax Check'), sub { $self->js_syntax_check },
+		]
+	);
 }
 
 sub js_eautifier {
-	my ( $self ) = @_;
-	my ($main,$src,$doc,$code) = $self->_get_code; return unless $code;
+	my ($self) = @_;
+	my ( $main, $src, $doc, $code ) = $self->_get_code; return unless $code;
 
 	require JavaScript::Beautifier;
 	JavaScript::Beautifier->import('js_beautify');
-		
-	my $pretty_js = js_beautify( $code, {
-        indent_size => 4,
-        indent_character => ' ',
-    } );
-    
-    if ( $src ) {
+
+	my $pretty_js = js_beautify(
+		$code,
+		{   indent_size      => 4,
+			indent_character => ' ',
+		}
+	);
+
+	if ($src) {
 		my $editor = $main->current->editor;
-	    $editor->ReplaceSelection( $pretty_js );
+		$editor->ReplaceSelection($pretty_js);
 	} else {
-		$doc->text_set( $pretty_js );
+		$doc->text_set($pretty_js);
 	}
 }
 
 sub js_minifier {
-	my ( $self ) = @_;
-	my ($main,$src,$doc,$code) = $self->_get_code; return unless $code;
+	my ($self) = @_;
+	my ( $main, $src, $doc, $code ) = $self->_get_code; return unless $code;
 
 	require JavaScript::Minifier::XS;
 	JavaScript::Minifier::XS->import('minify');
-		
-	my $mjs = minify( $code );
-    
-    if ( $src ) {
+
+	my $mjs = minify($code);
+
+	if ($src) {
 		my $editor = $main->current->editor;
-	    $editor->ReplaceSelection( $mjs );
+		$editor->ReplaceSelection($mjs);
 	} else {
-		$doc->text_set( $mjs );
+		$doc->text_set($mjs);
 	}
 }
 
-sub js_syntax_check
-{
-	my ( $self ) = @_;
-	my ($main,$src,$doc,$code) = $self->_get_code; return unless $code;
+sub js_syntax_check {
+	my ($self) = @_;
+	my ( $main, $src, $doc, $code ) = $self->_get_code; return unless $code;
 
 	require JE;
 
-	if ( JE->new->parse($code) )
-	{
+	if ( JE->new->parse($code) ) {
 		$main->message( Wx::gettext('Syntax ok'), 'Info' );
-	}
-	else
-	{
+	} else {
 		$main->message( Wx::gettext($@), 'Info' );
 	}
 }
 
-sub _get_code
-{
-	my ( $self ) = @_;
+sub _get_code {
+	my ($self) = @_;
 	my $main = $self->main;
 
 	my $src = $main->current->text;
@@ -98,15 +98,11 @@ sub _get_code
 	return unless $doc;
 	my $code = $src ? $src : $doc->text_get;
 	return unless ( defined $code and length($code) );
-	return ($main,$src,$doc,$code);
+	return ( $main, $src, $doc, $code );
 }
 
 1;
 __END__
-
-=head1 NAME
-
-Padre::Plugin::JavaScript - L<Padre> and JavaScript
 
 =head1 JavaScript Beautifier
 
@@ -115,19 +111,3 @@ use L<JavaScript::Beautifier> to beautify js
 =head1 JavaScript Minifier
 
 use L<JavaScript::Minifier::XS> to minify js
-
-=head1 AUTHOR
-
-Adam Kennedy C<< <adamk@cpan.org> >>
-
-Fayland Lam, C<< <fayland at gmail.com> >>
-
-=head1 COPYRIGHT & LICENSE
-
-Copyright 2008 Adam Kennedy & Fayland Lam all rights reserved.
-Copyright 2010 Padre team.
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
-
-=cut
